--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
-		"ethers": "^5.0.30",
+		"await-to-js": "^2.1.1",
+		"ethers": "^5.0.31",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-router-dom": "^5.2.0",
