--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@material-ui/icons": "^4.11.2",
 		"@material-ui/system": "^4.11.3",
 		"@metamask/detect-provider": "^1.2.0",
+		"@reduxjs/toolkit": "^1.5.0",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
@@ -18,6 +19,7 @@
 		"ethers": "^5.0.31",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.2",
 		"typescript": "^4.1.2",
@@ -48,6 +50,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/react-redux": "^7.1.16",
 		"@types/react-router-dom": "^5.1.7",
 		"prettier": "^2.2.1"
 	}
