--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"await-to-js": "^2.1.1",
+		"axios": "^0.21.1",
 		"ethers": "^5.0.31",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
@@ -52,6 +53,7 @@
 	"devDependencies": {
 		"@types/react-redux": "^7.1.16",
 		"@types/react-router-dom": "^5.1.7",
+		"dotenv": "^8.2.0",
 		"prettier": "^2.2.1"
 	}
 }
