--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"await-to-js": "^2.1.1",
 		"axios": "^0.21.1",
 		"ethers": "^5.0.31",
+		"highcharts": "^9.0.1",
+		"highcharts-react-official": "^3.0.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.2",
@@ -53,7 +55,6 @@
 	"devDependencies": {
 		"@types/react-redux": "^7.1.16",
 		"@types/react-router-dom": "^5.1.7",
-		"dotenv": "^8.2.0",
 		"prettier": "^2.2.1"
 	}
 }
