--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/react-dom": "^17.0.0",
 		"await-to-js": "^2.1.1",
 		"axios": "^0.21.1",
+		"bignumber.js": "^9.0.1",
 		"ethers": "^5.0.31",
 		"highcharts": "^9.0.1",
 		"highcharts-react-official": "^3.0.0",
@@ -26,7 +27,8 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.2",
 		"typescript": "^4.1.2",
-		"web-vitals": "^1.0.1"
+		"web-vitals": "^1.0.1",
+		"web3": "^1.3.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
