--- a/package.json
+++ b/package.json
@@ -11,16 +11,13 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
-		"@types/jest": "^26.0.15",
-		"@types/node": "^12.0.0",
-		"@types/react": "^17.0.0",
-		"@types/react-dom": "^17.0.0",
 		"await-to-js": "^2.1.1",
 		"axios": "^0.21.1",
 		"bignumber.js": "^9.0.1",
 		"ethers": "^5.0.31",
 		"highcharts": "^9.0.1",
 		"highcharts-react-official": "^3.0.0",
+		"numeral": "^2.0.6",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-hook-form": "^6.15.4",
@@ -56,6 +53,11 @@
 		]
 	},
 	"devDependencies": {
+		"@types/jest": "^26.0.15",
+		"@types/node": "^12.0.0",
+		"@types/numeral": "^2.0.1",
+		"@types/react": "^17.0.0",
+		"@types/react-dom": "^17.0.0",
 		"@types/react-redux": "^7.1.16",
 		"@types/react-router-dom": "^5.1.7",
 		"prettier": "^2.2.1"
