--- a/package.json
+++ b/package.json
@@ -3,30 +3,34 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@material-ui/core": "^4.11.3",
+		"@material-ui/core": "^4.11.4",
 		"@material-ui/icons": "^4.11.2",
 		"@material-ui/system": "^4.11.3",
 		"@metamask/detect-provider": "^1.2.0",
-		"@reduxjs/toolkit": "^1.5.0",
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.1.0",
-		"@testing-library/user-event": "^12.1.10",
-		"await-to-js": "^2.1.1",
+		"@reduxjs/toolkit": "^1.5.1",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/user-event": "^13.1.9",
+		"@types/jest": "^26.0.23",
+		"@types/node": "^15.6.0",
+		"@types/numeral": "^2.0.1",
+		"@types/react": "^17.0.6",
+		"@types/react-dom": "^17.0.5",
+		"await-to-js": "^3.0.0",
 		"axios": "^0.21.1",
 		"bignumber.js": "^9.0.1",
-		"ethers": "^5.0.31",
-		"highcharts": "^9.0.1",
+		"ethers": "^5.2.0",
+		"highcharts": "^9.1.0",
 		"highcharts-react-official": "^3.0.0",
 		"numeral": "^2.0.6",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
-		"react-hook-form": "^6.15.4",
-		"react-redux": "^7.2.2",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-hook-form": "^7.6.4",
+		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.2",
-		"typescript": "^4.1.2",
-		"web-vitals": "^1.0.1",
-		"web3": "^1.3.4"
+		"react-scripts": "4.0.3",
+		"typescript": "^4.2.4",
+		"web-vitals": "^1.1.2",
+		"web3": "^1.3.6"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -53,11 +57,8 @@
 		]
 	},
 	"devDependencies": {
-		"@types/jest": "^26.0.15",
-		"@types/node": "^12.0.0",
-		"@types/numeral": "^2.0.1",
-		"@types/react": "^17.0.0",
-		"@types/react-dom": "^17.0.0",
+		"@testing-library/dom": "^7.31.0",
+		"@testing-library/jest-dom": "^5.12.0",
 		"@types/react-redux": "^7.1.16",
 		"@types/react-router-dom": "^5.1.7",
 		"prettier": "^2.2.1"
