--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"numeral": "^2.0.6",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-feather": "^2.0.9",
 		"react-hook-form": "^7.6.4",
 		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.0",
