--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 		"await-to-js": "^3.0.0",
 		"axios": "^0.21.1",
 		"bignumber.js": "^9.0.1",
-		"chart.js": "^3.2.1",
 		"ethers": "^5.2.0",
 		"highcharts": "^9.1.0",
 		"highcharts-react-official": "^3.0.0",
@@ -30,6 +29,7 @@
 		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
+		"recharts": "^2.0.9",
 		"typescript": "^4.2.4",
 		"web-vitals": "^1.1.2",
 		"web3": "^1.3.6"
