--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,5 +14,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      - env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - run: yarn
       - run: yarn deploy
