--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,14 +14,14 @@ jobs:
 
     steps:
       - name: Install Dependencies
-        uses: actions/checkout@v1
-        run: yarn installDependencies
-      
-      - name: Deploy
-        uses: youyo/aws-cdk-github-actions@v1
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          AWS_DEFAULT_OUTPUT: ${{ secrets.AWS_DEFAULT_OUTPUT }}
-        run: yarn deploy
+        - uses: actions/checkout@v1
+        - run: yarn installDependencies
+
+      # - name: Deploy
+      #   uses: youyo/aws-cdk-github-actions@v1
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+      #     AWS_DEFAULT_OUTPUT: ${{ secrets.AWS_DEFAULT_OUTPUT }}
+      #   run: yarn deploy
