--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,3 +12,10 @@ jobs:
         with:
           node-version: '14'
       - run: yarn installDependencies
+
+      - env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+          AWS_DEFAULT_OUTPUT: ${{ secrets.AWS_DEFAULT_OUTPUT }}
+      - run: yarn deploy
