--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,21 +1,23 @@
 name: Deploy BlockSight Frontend
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   test-and-deploy: 
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+        AWS_DEFAULT_OUTPUT: ${{ secrets.AWS_DEFAULT_OUTPUT }}
+      uses: actions/checkout@v2
+      uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: yarn installDependencies
-
-      - env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          AWS_DEFAULT_OUTPUT: ${{ secrets.AWS_DEFAULT_OUTPUT }}
-      - run: yarn deploy
+      run: yarn installDependencies
+      run: yarn deploy
