--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy BlockSight Frontend
+name: Deploy DApp Sandbox Frontend
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '16'
       - run: yarn installDependencies
       - run: yarn deploy
         env:
